--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
           <span class="caret"></span></a>
           <ul class="dropdown-menu" >
             <li class="divider"></li>
-            <li><a href="employe">Employe</a></li>
+            <li><a routerLink="listemp">Employe</a></li>
             <li><a href="presence">Presence</a></li>
           </ul>
         </li>
