--- a/src/app/components/classe/liste-eleve/liste-eleve.component.scss
+++ b/src/app/components/classe/liste-eleve/liste-eleve.component.scss
@@ -1,3 +1,4 @@
+
 #toggle{
     visibility: hidden;
     opacity: 0;
@@ -14,6 +15,8 @@
   .add{
     background: skyblue;
     color: white;
+    margin-top: 1%;
+    margin-left: 3px;
 
     border-radius: 4px;
   }
@@ -23,64 +26,87 @@
       transform: translateY(-10px);
     }
   }
-  
+ 
   dialog{
     animation: appear 350ms ease-in 1;
     max-width: 500px;
     z-index: 99;
   }
+  .dang{
+    width: 4px;
+   float: right;
+   margin-right: 15px;
+  }
+  .fa-trash{
+    height: 5px;
+    width: 3px;
+    padding:1%;
+    padding-right: 2px;
+  }
+  .btn-danger{
+    width: 5px;
+    height: max-content ;
+  text-align: center;
+ 
+ }
+ 
 
 
 
 
-.table{
 
-	width: 30%;
-	border-radius: 8px;
 
-	
-}
-thead{
-    background-color: rgba(105, 143, 214, 0.534);
-}
-tbody{
-    background-color:rgba(74, 97, 228, 0.137) ;
-}
-h1{
-	margin-top: 1%;
-}
-a{
-    text-decoration: none;
-    color: black;
 
-}
-.danger{
-    background-color: blue;
-    color: white;
- float:right;
- font-size: 70%;
- border: blue;
- border-radius: 5px;
-}
-.con{
-width: 100%;
-display: grid;
-margin-left: 10px;
-background-color: #2600ff17;
+ 
+  /* liste presence*/ 
+  
+  
+  @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2&display=swap');
+  
+  
+  
+  
+  
+  
+  .tbl-header{
+    background-color: rgba(135, 207, 235, 0.418);
+
+   }
+
+.roww {
+  display: flex;
+  flex-direction: row;
+  margin-left:-5px;
+  margin-right:-15px;
 }
 
-.listc{
-    width: 50%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-}
-.pres{
-   width: 100%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+.columnn {
+  padding: 10px;
 }
 
-h1{
-    color: blue;
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
 }
 
+th, td {
+  text-align: left;
+  padding: 16px;
+}
+
+@media screen and (max-width:763px) {
+  .roww{
+    display: flex;
+    flex-direction: column;
+  }
+  .columnn {
+    padding: 8px;
+    width: 10%;
+  }
+  .tb2{
+    width: 10%;
+  }
+}
