--- a/src/app/components/classe/profil-eleve/profil-eleve.component.scss
+++ b/src/app/components/classe/profil-eleve/profil-eleve.component.scss
@@ -1,7 +1,38 @@
+#toggle{
+    visibility: hidden;
+    opacity: 0;
+    position: relative;
+    z-index: 99;
+  }
+  
+  #toggle:checked ~ dialog {
+    display: block;
+  }
 
+  label{ background: skyblue;
+    border-radius: 4px;}
+  .add{
+    background: blue;
+    color: white;
+    
+
+    border-radius: 4px;
+  }
+  @keyframes appear {
+    0%{
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+  }
+  
+  dialog{
+    animation: appear 50ms ease-in 1;
+    max-width: 500px;
+    z-index: 99;
+  }
 .procon{
     display: grid;
-    grid-template-columns: 300px auto 450px;
+    grid-template-columns: 400px 450px;
     height: 91vh;
     margin-top: 10px;
     gap:20px;
@@ -13,41 +44,38 @@ img{
     width: 200px;
  
 }
-.sidebar{
-  margin-left: 10px;
-  box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
 
-  border-radius: 10px;
+
+.profilcard{
+  box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
+  background-color: rgba(128, 128, 128, 0.096);
+
+  border-radius: 2%;
     text-align: center;
-    align-content: center;
-    align-items: center;
-    
- 
-}
+    margin-top: 10px;
+    margin-left: 10%;
+    margin-bottom: 20px;
+  }
 
-.info{
-    
+  .infocard{
+    box-shadow:  0 5px 15px rgba(138, 135, 135, 0.307);
+    background-color: rgba(128, 128, 128, 0.096);
+    border-radius: 2%;
+   text-align: center;
+   margin-top: 10px;
+   margin-bottom: 20px;
+  }
+.lig1{
     display: grid;
-
-  
-   row-gap: 20px;
-   border-radius: 10px;
+    grid-template-columns: 350px  auto;
+gap:2%
+}
+.tot{
+    display: grid;
+    gap: 2.5%;
     
 }
-.progresss{
-    box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
-    height: 100%;
-    margin-right: 10px;
-    border-radius: 10px;
-    
-}
-.slider{
 
-    align-items: center;
-    text-align: center;
-    height: max-content;
-
-}
 i{
     padding: 0px;
     margin-top: 0;
@@ -73,32 +101,30 @@ i{
     margin-right: 1.3%;
     color: white;
 }
-.pog{
-    margin-left: 50px;
-    margin-right: 30px;
-    height: 100%;
-    display: grid;
-    gap: 2.5px;
-    border-radius: 10px;
-}
 
 
-@media all and (max-width: 1051px) {
-    .procon {
-        display: grid;
-        grid-template-columns: 33% auto 33%;
+
+@media all and (max-width: 800px) {
+    .lig1{
+        display: flex;
+        flex-direction: column;
     }
-    .progr{
-        height: 30%;
-    }
-    .info{
-    
-        display: grid;
-        grid-template-columns: 100%;
-       grid-template-rows: 150px;
-       row-gap: 5px;
-       border-radius: 10px;
+   
+    .infocard{
+       margin-left: 2.5%;
+      
         
+    }
+    .profilcard {
+    display: grid;
+    grid-template-columns: auto auto;
+     text-align: center;
+     gap: 0px;
+    }
+    .profilcard .card-title{
+      text-align: center;
+      margin-top: 35%;
+      font-size: 20px;
     }
     
   }
@@ -112,16 +138,25 @@ i{
   
     font-weight:bold;
   }
-@media all and (max-width: 700px) {
-    .procon {
-      display: flex;
-      flex-direction: column;
-      margin-top: 1%;
-      margin-left: 4%;
-      gap:1%;
-       border-radius: 10px;
-    }
+@media all and (max-width: 462px) {
+  
+
+
+  .profilcard .card-title{
+    text-align: center;
+    margin-top: 6%;
+    font-size: 18px;
+  
   }
+  .profilcard {
+    display: flex;
+flex-direction: column;
+     text-align: center;
+     gap: 0px;
+    }
+  
+}
+
  
 
 
@@ -130,107 +165,76 @@ i{
 
 
 
-  .i {
-	position: relative;
-	display: block;
-	width: 480px;
-	height: 380px;
-	overflow: hidden;
-	border-radius: 5px;
-    left: -10px;
-    top: 50px;
-}
 
-.i:before, .i:after {
-	content: '⥪';
-	position: absolute;
-	top: 50%;
-	left: 1rem;
-	z-index: 2;
-	width: 2rem;
-	height: 2rem;
-	background: dodgerblue;
-	color: white;
-	border-radius: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	pointer-events: none;
-}
 
-.i:after {
-	content: '⥭';
-	left: auto;
-	right: 1rem;
-}
-
-.slider{
+  .footer{
     display: flex;
-    justify-content: center;
-}
-/* I haven't found a way for IE and Edge to let me style inputs that way */
+    flex-direction: row;
+    gap: 0.1%;
+  align-self: center;
+    align-content: center;
+    
+    
 
-.sl {
-	appearance: none;
-	-ms-appearance: none;
-	-webkit-appearance: none;
-	display: block;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	border-radius: 5px;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	transform: translateX(100%);
-	transition: transform ease-in-out 400ms;
-	z-index: 1;
+    
+  }
+  .lemp{
+  margin-top: 1%;
+    margin-left: 2%;
+    width: 100%;
+  }
+.card-footer{
+ margin-left: auto;
+ margin-right: auto;
+ color: #270ace;
 }
 
-.sl:focus {
-	outline: none;
+  .card {
+  
+    box-shadow:  0 5px 30px rgba(138, 135, 135, 0.705);
+    border-radius: 10px;
+    border: 0;
+height: 350px;
+
+
+  }
+  .cl{
+    display:grid;
+
+    gap: 0.2%;
+position: absolute;
+
+overflow: hidden;
+
+  }
+ 
+  .card-body{
+  display: grid;
+  gap: 0.2%;
+ 
+
+  }
+ .card-title{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+ display: block;
+   text-align: center;
+   text-decoration: none;
+   color:black;
+   text-transform: uppercase;
+ }
+ .card-text{
+   text-align: center;
+ }
+ .col{
+   top:0px
+ }
+
+
+.ligne{
+display: grid;
+grid-template-columns: 33%  33%;
+
+gap: 0.5%;
 }
 
-.sl:after {
-	content: attr(title);
-	position: absolute;
-	top: 1rem;
-	left: 1rem;
-	background-color: rgba(0,0,0,0.4);
-	color: white;
-	padding: .5rem;
-	font-size: 1rem;
-	border-radius: 5px;
-}
-
-.sl:not(checked):before {
-	content: '';
-	position: absolute;
-	width: 2rem;
-	height: 2rem;
-	border-radius: 50%;
-	top: 50%;
-	left: calc(-100% + 1rem);
-}
-
-.sl:checked:before {
-	display: none;
-	left: 1rem;
-}
-
-.sl:checked {
-	transform: translateX(0);
-	
-	z-index: 0;
-	box-shadow: -5px 10px 20px -15px rgba(0,0,0,1);
-}
-
-.sl:checked + .sl:before {
-	left: -3rem;
-}
-
-.sl:checked + .sl ~ .sl:before {
-	display: none;
-}
