--- a/src/app/components/employe/presence/presence.component.html
+++ b/src/app/components/employe/presence/presence.component.html
@@ -13,12 +13,9 @@
 						<thead>
 							<tr>
 								<th>Nom</th>
-								<th>Lundi</th>
-								<th>Mardi</th>
-								<th>Mercredi</th>
-								<th>Jeudi</th>
-								<th>Vendredi</th>
-								<th>Samedi</th>
+								<th>Etat</th>
+								<th>Action</th>
+								
 							</tr>
 						</thead>
 					</table>
@@ -26,16 +23,37 @@
 				<div class="tbl-content">
 					<table cellpadding="0" cellspacing="0" border="0">
 						<tbody>
-							<tr *ngFor="let p of presence">
-								<td>{{p.name}}</td>
+							<tr *ngFor="let p of employees">
+								<td>{{p.nom}}</td>
+								<!--td> <input  type="checkbox" [checked]="p.select"></td>
 								<td> <input  type="checkbox" [checked]="p.select"></td>
 								<td> <input  type="checkbox" [checked]="p.select"></td>
 								<td> <input  type="checkbox" [checked]="p.select"></td>
 								<td> <input  type="checkbox" [checked]="p.select"></td>
-								<td> <input  type="checkbox" [checked]="p.select"></td>
-								<td> <input  type="checkbox" [checked]="p.select"></td>
+								<td> <input  type="checkbox" [checked]="p.select"></td-->
 								
-								
+								<td><select name="eleves" (change)="presenceClick(p,$event)">
+									<option selected  value="" disabled>select etat</option>
+									<option value="true">present</option>
+									<option value="false">absent</option>
+									</select> </td> 
+								<td>
+									<td>
+										<div class="pop">
+										  <input type="checkbox" id="toggle">
+						  
+										  
+										  <label for="toggle" class="add" (click)="getPresences(p)"><i class="bi bi-search"></i></label>
+									  
+										  <dialog>
+											
+											<p *ngFor="let p of presences">{{p.etat?'Present':'absent'}} {{p.date}}</p>
+											<div class="col-12">
+											  <label for="toggle">close </label>
+											</div>
+										  </dialog>
+										</div>
+									  </td>
 
 							</tr>
 						
@@ -44,9 +62,7 @@
 					</table>
 					
 				</div>
-				<div>
-					<input class="submit" type="submit" value="envoyer" style="width:80px;">	
-				</div>
+			
 			</div>
 		
 		
@@ -66,22 +82,7 @@
 
 
 
-<div class="area" >
-	<ul class="circles">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-	</ul>
-  </div >
-  
-  
+
   
   
   
